<resources>

    <string-array name="payment_time">
        <item>۱ ماه</item>
        <item>۱ هفته</item>
        <item>۲ هفته</item>
        <item>۳ هفته</item>
        <item>۲ ماه</item>
        <item>۳ ماه</item>
        <item>۴ ماه</item>
        <item>۵ ماه</item>
        <item>۶ ماه</item>
    </string-array>

    <string name="userName">UserName</string>

    <string name="app_name">Sandoghcheh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">Amirhossein</string>
    <string name="intro_title1">Online Payment</string>
    <string name="intro_title2">Mannage your Time</string>
    <string name="finishBtn">Start App</string>
    <string name="login">Log In</string>
    <string name="splash_title">Read Holy Quran</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="user_info">User info</string>
    <string name="decrease">Decrease Money</string>
    <string name="loan_detail">Loan Detail</string>
    <string name="add_bank">Add bank</string>
    <string name="bank_detail">Bank detail</string>
    <string name="setting">Settings</string>
    <string name="user_list">User list</string>
    <string name="main_page">Main page</string>


    <string name="skip_intro">Skip</string>
    <string name="bank_name"> Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="card_number">Card Number</string>
    <string name="address">Address</string>
    <string name="address_home">Home Address</string>
    <string name="add_card">Add Card</string>
    <string name="full_name">Full Name</string>
    <string name="search_full_name">Username or lastname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="current_date">1400/7/29</string>
    <string name="add_user">Add User</string>
    <string name="first_money">First Money</string>
    <string name="password">Password</string>
    <string name="melly">Melly</string>
    <string name="card_number_sample">60377011526585</string>
    <string name="account_number_sample">3479111</string>
    <string name="create_date_bank">Date of Bank Creation</string>
    <string name="amount_left_in_account">Amount left in account</string>
    <string name="amount_left">20000</string>
    <string name="decrease_account">Decrease</string>
    <string name="submit">Submit</string>
    <string name="father_name"> Father Name</string>
    <string name="delete_all">Delete all users</string>
    <string name="search">Search between users</string>
    <string name="edit_user_info">Edit user info</string>
    <string name="father_name_sample">Jalal</string>
    <string name="amount">Price</string>
    <string name="address_home_sample">Iran, Isfahan</string>
    <string name="payments_list">Payment list</string>
    <string name="empty_user_field_error">Entre Username</string>
    <string name="edit_bank_info">Edit bank info</string>
    <string name="edit">Edit</string>
    <string name="loan_price">Loan Amount:</string>
    <string name="benefit_percent">Loan benefit percent:</string>
    <string name="section_time">Section time</string>
    <string name="percent">Percent</string>
    <string name="loan_getter">Loan getter:</string>
    <string name="section_price">Section Price:</string>
    <string name="loan_benefit">Loan benefit</string>
    <string name="whole_loan_price">Loan amount included everything</string>
    <string name="get_loan">Get Loan</string>
    <string name="loan_date">Date of getting Loan:</string>
    <string name="loan_section">Loan Sections:</string>
    <string name="calculate">calculate</string>
    <string name="transactions_list_of_user">Transaction list of user:</string>
    <string name="submit_increase">Submit Increase</string>
    <string name="submit_increase_to">Submit increase to</string>
    <string name="final_money_user">Last money of user</string>
    <string name="total_increase">Increase money till now:</string>
    <string name="loan_expired">Loan Expired at:</string>
    <string name="loan_list_user">Loan List of user:</string>
    <string name="sandogh">Sandogh</string>
    <string name="submit_decrease">Submit Decrease</string>
    <string name="submit_loan">Get Loan</string>
    <string name="pay_payment">Pay payment</string>
    <string name="delete_user">Delete User</string>
    <string name="transaction_history">Transaction history</string>
    <string name="no_loan_user">(User had\'t gotten any loan till now)</string>
    <string name="not_payed_loan">had\'t paid</string>
    <string name="loans">Loan List</string>
    <string name="speech_not_supported">Did\'t get you!!</string>
    <string name="voiceText">Please say something! </string>
    <string name="send_info_via_sms">Send as sms</string>
    <string name="send_info_via_txt">Sent as text</string>
    <string name="send_info_via_img">Send as picture</string>
    <string name="my_preference_key">vibrate</string>


</resources>