<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.holyquran.ui.editBankInfo.EditBankInfoViewModel" />

        <variable
            name="bankInfo"
            type="com.example.holyquran.data.model.Bank" />
    </data>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        tools:context=".ui.editbankInfo.EditbankInfoFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_bank_info"
                android:textColor="@color/gray800"
                android:textSize="30dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layoutDirection="ltr"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:text="@{bankInfo.bankName}"
                            android:textColor="@color/gray800"
                            android:textSize="20sp"
                            tools:text="@string/melly" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bank_name"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:layoutDirection="ltr"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/mobileNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:text="@{bankInfo.cardNumber}"
                            android:textColor="@color/gray800"
                            android:textSize="20sp"
                            tools:text="@string/card_number_sample" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_number"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@{bankInfo.accountNumber}"
                        android:textColor="@color/gray800"
                        android:textSize="20sp"
                        tools:text="@string/account_number_sample" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_number"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@{bankInfo.address}"
                        android:textColor="@color/gray800"
                        android:textSize="20sp"
                        tools:text="https://MellyBank.com" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> viewModel.onSubmitBtnClick()}"
                    android:text="@string/edit" />
            </LinearLayout>


        </LinearLayout>


        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--            android:onClick="@{()-> viewModel.onSubmitBtnClick()}"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="bottom"-->
        <!--            android:layout_marginBottom="30dp"-->
        <!--            android:backgroundTint="#1e45d1"-->
        <!--            android:src="@drawable/ic_baseline_edit_24"-->
        <!--            app:tint="@color/white" />-->
    </FrameLayout>
</layout>
