<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.holyquran.ui.popupWindow.PopupViewModel" />

        <variable
            name="userName"
            type="com.example.holyquran.data.model.UserInfo" />

        <variable
            name="loan"
            type="com.example.holyquran.data.model.Loan" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/for_pop_up_square"
        android:orientation="vertical"
        tools:context=".ui.popupWindow.PopupWindowFragment">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{userName.fullName}"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    tools:text="@string/user_profile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToIncrease()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/submit_increase"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_add_circle_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="right"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToDecrease()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/submit_decrease"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_add_circle_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="right"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToLoan()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/submit_loan"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_add_circle_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/payPaymentLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="end"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToPayPayments()}"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/noLoanForUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_loan_user"
                    android:textColor="@color/gray600"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/payPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/pay_payment"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <ImageView
                    android:id="@+id/payPaymentImg"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_add_circle_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="right"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToLoanList()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="تاریخچه وام ها"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_format_list_bulleted_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="right"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToUserTransactionHistory()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/transaction_history"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_format_list_bulleted_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="right"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.goToEditUserInfo()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/edit_user_info"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_edit_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="right"
                android:layout_marginBottom="5dp"
                android:layoutDirection="ltr"
                android:onClick="@{() -> viewModel.deleteUser()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/delete_user"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_delete2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</layout>
