<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loanDetailViewModel"
            type="com.example.holyquran.ui.loan.loanDetails.LoanDetailViewModel" />

        <variable
            name="loanInfo"
            type="com.example.holyquran.data.model.Loan" />

        <variable
            name="userInfo"
            type="com.example.holyquran.data.model.UserInfo" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        tools:context=".ui.loan.loanDetails.LoanDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="20sp"-->
                <!--                    android:layoutDirection="ltr"-->
                <!--                    android:orientation="horizontal">-->

                <!--                    <TextView-->
                <!--                        android:id="@+id/userLoan"-->
                <!--                        android:layout_width="wrap_content"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:textColor="@color/gray600"-->
                <!--                        android:textSize="20sp"-->
                <!--                        tools:text="امیر حسین" />-->

                <!--                    <TextView-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:text="وام گیرنده:"-->
                <!--                        android:textColor="@color/black"-->
                <!--                        android:textSize="20sp" />-->
                <!--                </LinearLayout>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{loanInfo.amount}"
                        android:textColor="@color/gray600"
                        android:textSize="20sp"
                        tools:text="5000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_price"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{loanInfo.createDate}"
                    android:textColor="@color/gray600"
                    android:textSize="20sp"
                    tools:text="@string/current_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_date"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loanExpiredAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray600"
                    android:textSize="20sp"
                    tools:text="@string/current_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_expired"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{loanInfo.loanSections}"
                    android:textColor="@color/gray600"
                    android:textSize="20sp"
                    tools:text="12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" تعداد قسط ها:"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{loanInfo.payment}"
                    android:textColor="@color/gray600"
                    android:textSize="20sp"
                    tools:text="۱۰۰۰۰" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_price"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{loanInfo.sectionTime}"
                    android:textColor="@color/gray600"
                    android:textSize="20sp"
                    tools:text="1 ماه" />

                <TextView
                    android:id="@+id/sectionSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_time"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/paymentsId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payments_list" />
        </LinearLayout>
    </LinearLayout>
</layout>
